docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/checkbox.mdx
---
title: Checkbox
description: A Jetpack Compose Checkbox component for selection controls.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** For cross-platform usage, see the universal [`Checkbox`](../universal/checkbox) — it renders the appropriate native component per platform.

Expo UI Checkbox matches the official Jetpack Compose [Checkbox](https://developer.android.com/develop/ui/compose/components/checkbox) API.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/checkbox/android-light.webp"
  darkSrc="/static/images/expo-ui/checkbox/android-dark.webp"
  alt="Checked and unchecked Material 3 checkboxes"
/>

## Installation

<APIInstallSection />

## Usage

### Basic checkbox

<ComponentExample
  title="CheckboxExample.tsx"
  src="/static/images/expo-ui/examples/checkbox-basic-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/checkbox-basic-android-dark.webp"
  alt="A checked Material 3 checkbox">

```tsx
import { useState } from 'react';
import { Host, Checkbox } from '@expo/ui/jetpack-compose';

export default function CheckboxExample() {
  const [checked, setChecked] = useState(false);

  return (
    <Host matchContents>
      <Checkbox value={checked} onCheckedChange={setChecked} />
    </Host>
  );
}
```

</ComponentExample>

### Custom colors

<ComponentExample
  title="CustomColorsExample.tsx"
  src="/static/images/expo-ui/examples/checkbox-custom-colors-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/checkbox-custom-colors-android-dark.webp"
  alt="A checked checkbox filled purple with a white checkmark">

```tsx
import { useState } from 'react';
import { Host, Checkbox } from '@expo/ui/jetpack-compose';

export default function CustomColorsExample() {
  const [checked, setChecked] = useState(false);

  return (
    <Host matchContents>
      <Checkbox
        value={checked}
        onCheckedChange={setChecked}
        colors={{
          checkedColor: '#6200EE',
          checkmarkColor: '#FFFFFF',
        }}
      />
    </Host>
  );
}
```

</ComponentExample>

### Select all (TriStateCheckbox)

Use `TriStateCheckbox` for a parent checkbox that reflects the state of its children. It supports three states: `'on'`, `'off'`, and `'indeterminate'`.

Apply the `toggleable` modifier to each `Row` to make the entire row (checkbox + label) tappable with correct accessibility semantics. When using `toggleable` on the row, omit `onCheckedChange`/`onClick` from the checkbox itself to avoid double-handling.

<ComponentExample
  title="SelectAllExample.tsx"
  src="/static/images/expo-ui/examples/checkbox-select-all-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/checkbox-select-all-android-dark.webp"
  alt="A Select all row showing the indeterminate dash above one checked and two unchecked options">

```tsx
import { useState } from 'react';
import {
  Host,
  Checkbox,
  TriStateCheckbox,
  Row,
  Column,
  Text,
} from '@expo/ui/jetpack-compose';
import { toggleable } from '@expo/ui/jetpack-compose/modifiers';

export default function SelectAllExample() {
  const [child1, setChild1] = useState(false);
  const [child2, setChild2] = useState(false);
  const [child3, setChild3] = useState(false);

  const parentState =
    child1 && child2 && child3
      ? 'on'
      : !child1 && !child2 && !child3
        ? 'off'
        : 'indeterminate';

  return (
    <Host matchContents>
      <Column>
        <Row
          verticalAlignment="center"
          modifiers={[
            toggleable(
              parentState === 'on',
              () => {
                const newState = parentState !== 'on';
                setChild1(newState);
                setChild2(newState);
                setChild3(newState);
              },
              { role: 'checkbox' }
            ),
          ]}>
          <TriStateCheckbox state={parentState} />
          <Text>Select all</Text>
        </Row>
        <Row
          verticalAlignment="center"
          modifiers={[
            toggleable(child1, () => setChild1(!child1), {
              role: 'checkbox',
            }),
          ]}>
          <Checkbox value={child1} />
          <Text>Option 1</Text>
        </Row>
        <Row
          verticalAlignment="center"
          modifiers={[
            toggleable(child2, () => setChild2(!child2), {
              role: 'checkbox',
            }),
          ]}>
          <Checkbox value={child2} />
          <Text>Option 2</Text>
        </Row>
        <Row
          verticalAlignment="center"
          modifiers={[
            toggleable(child3, () => setChild3(!child3), {
              role: 'checkbox',
            }),
          ]}>
          <Checkbox value={child3} />
          <Text>Option 3</Text>
        </Row>
      </Column>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import {
  Checkbox,
  TriStateCheckbox,
} from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/checkbox"
  apiName="Checkbox"
/>
